--- a/packages/web/src/design-systems/default.css
+++ b/packages/web/src/design-systems/default.css
@@ -12,6 +12,8 @@ html,
 body,
 #root {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
